renombrado-de-proyecto-a-index

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Nuevo-proyecto-land</title>
     <link rel="stylesheet" href="proyecto.Css" />
   </head>
   <body>
@@ -11,25 +11,27 @@
       <img src="images/img-logo-land.jpg.png" alt="logo" class="logo" />
       <nav class="navbar">
         <ul class="navbar-list">
-          <ul>
+          <li>
             <a href="#">Home</a>
-          </ul>
-          <ul>
+          </li>
+          <li>
             <a href="#">Descubre</a>
-          </ul>
-          <ul>
+          </li>
+          <li>
             <a href="#">Contactanos</a>
-          </ul>
-          <ul>
+          </li>
+          <li>
             <a href="#">Biblioteca</a>
-          </ul>
+          </li>
+          <li>
+            <img
+              src="images/cart-shopping-solid.svg"
+              alt="shopping cart"
+              class="cart-icon"
+            />
+          </li>
         </ul>
       </nav>
-      <img
-        src=".assets/img/carrito-de-compras.svg"
-        alt="carrito de compras"
-        class="cart-icon"
-      />
     </header>
   </body>
 </html>
