actualizo-archivo-con-seccion-hero-mas-hero-card-ademas-de-navbar

--- a/index.html
+++ b/index.html
@@ -11,18 +11,10 @@
       <img src="images/img-logo-land.jpg.png" alt="logo" class="logo" />
       <nav class="navbar">
         <ul class="navbar-list">
-          <li>
-            <a href="#">Home</a>
-          </li>
-          <li>
-            <a href="#">Descubre</a>
-          </li>
-          <li>
-            <a href="#">Contactanos</a>
-          </li>
-          <li>
-            <a href="#">Biblioteca</a>
-          </li>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Descubre</a></li>
+          <li><a href="#">Contactanos</a></li>
+          <li><a href="#">Biblioteca</a></li>
           <li>
             <img
               src="images/cart-shopping-solid.svg"
@@ -33,5 +25,28 @@
         </ul>
       </nav>
     </header>
+
+    <main class="main">
+      <section id="hero">
+        <div class="hero-info">
+          <h1>
+            "And don't you know that we are gods? And holy blood runs trough our
+            veins"
+          </h1>
+          <p>
+            Descubre las herramientas disponibles en tu camino para reconocerte
+            en tu estado mas puro. Que resuena contigo?
+          </p>
+          <a href="#">Registrate</a>
+        </div>
+
+        <div class="hero-card">
+          <img src="images/Shamanic.index.Css..png" alt="Chamanismo" />
+          <img src="images/Edgewitch.index.Css..png" alt="Brujeria de cerco" />
+          <img src="images/Rider.index.Css..png" alt="Tarot" />
+          <img src="images/astro.css.png" alt="Astrologia" />
+        </div>
+      </section>
+    </main>
   </body>
 </html>
