agrego-hero-section-mas-info-de-la-pagina

--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
     <link rel="stylesheet" href="proyecto.Css" />
   </head>
   <body>
+    <!-- navbar -->
     <header>
-      <img src="images/img-logo-land.jpg.png" alt="logo" class="logo" />
+      <img src="images/logo-removebg.png" alt="logo" class="logo" />
       <nav class="navbar">
         <ul class="navbar-list">
           <li><a href="#">Home</a></li>
           <li><a href="#">Descubre</a></li>
           <li><a href="#">Contactanos</a></li>
+          <li><a href="#">Blog</a></li>
           <li><a href="#">Biblioteca</a></li>
           <li>
             <img
@@ -26,11 +28,12 @@
       </nav>
     </header>
 
+    <!-- hero section -->
     <main class="main">
       <section id="hero">
         <div class="hero-info">
           <h1>
-            "And don't you know that we are gods? And holy blood runs trough our
+            "And don't you know that we are gods And holy blood runs trough our
             veins"
           </h1>
           <p>
@@ -48,5 +51,70 @@
         </div>
       </section>
     </main>
+
+    <!-- second section-info -->
+    <section id="info">
+      <h2>What can i found behind the mirror?</h2>
+
+      <div class="info-cards-container">
+        <div class="info-card">
+          <img src="images/Rider.index.Css..png" alt="tarot" />
+          <h3>Tarot Raider-Waite</h3>
+          <p>
+            La herramienta del tarot Rider Waite te ayuda a que puedas tener una
+            vision clara del por qué en tu camino y como mejorarlo, o
+            simplemente tener un consejo de los arcanos. Combinamos el
+            significado de los Arcanos mayores y menores mas una canalizacion en
+            luz.
+          </p>
+        </div>
+
+        <div class="info-card">
+          <img src="images/astro.css.png" alt="astrologia" />
+          <h3>Astrologia</h3>
+          <p>
+            La herramienta de la Astrologia nos brinda una vision mas clara de
+            Autoconocimiento donde podremos descubrir nuestro camino de vida,
+            fortalezas y debilidades, Karma y Darma, etc. Una muy buena
+            herramienta complementaria con las consultas de tarot.
+          </p>
+        </div>
+
+        <div class="info-card">
+          <img
+            src="images/Edgewitch.index.Css..png"
+            alt="Brujeria tradicional"
+          />
+          <h3>Brujeria Tradicional</h3>
+          <p>
+            Aprende a conectar con tu bruj@ inter@, reconecta la magia de las
+            plantas, ilumina tu espiritu con la magia de las velas, conecta con
+            las emociones del agua y purificate con el humo de los inciensos.
+          </p>
+        </div>
+
+        <div class="info-card">
+          <img src="images/Shamanic.index.Css..png" alt="Chamanismo" />
+          <h3>Chamanismo</h3>
+          <p>
+            Conoce las herramientas del chamanismo, aprende a conectar con tu
+            animal de poder, a realizar limpiezas energéticas y a sanar tu
+            cuerpo y alma con la medicina de la naturaleza.
+          </p>
+        </div>
+
+        <div class="info-card">
+          <img
+            src="images/products-info cards.css.png"
+            alt="productos-de-la-tienda"
+          />
+          <h3>Productos esclusivos de la Tienda</h3>
+          <p>
+            Descubre todos los productos disponibles de la tienda para potenciar
+            tus rituales y potenciarte a vos como bruj@.
+          </p>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
