actualizo-el-landing-page-añadi-menu-hamburguesa-mas-imagenes-de-productos-y-footer

--- a/index.html
+++ b/index.html
@@ -6,21 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nuevo-proyecto-land</title>
     <link rel="stylesheet" href="proyecto.Css" />
-    <link rel="stylesheet" href="mediaqueries.css">
+    <link rel="stylesheet" href="mediaqueries.css" />
   </head>
   <body>
     <!-- navbar -->
     <header>
-      <img src="images/logo-removebg.png" alt="logo sagitario esoterico" class="logo"/>
+      <img
+        src="images/logo-removebg.png"
+        alt="logo sagitario esoterico"
+        class="logo"
+      />
       <nav class="navbar">
         <!-- agregamos el label con la imagen del menu -->
-         <label for="menu-toggle" class="menu-label">
-          <img src="images/menu-hamburguesa-caldero.png" alt="menu-icon">
-         </label>
+        <label for="menu-toggle" class="menu-label">
+          <img src="images/menu-hamburguesa-caldero.png" alt="menu-icon" />
+        </label>
 
-         <!-- agrego el input y lo linkeamos al label -->
-          <input type="checkbox" id="menu-toggle">
-          <!-- comienza el menu -->
+        <!-- agrego el input y lo linkeamos al label -->
+        <input type="checkbox" id="menu-toggle" />
+        <!-- comienza el menu -->
 
         <ul class="navbar-list">
           <li><a href="#">Home</a></li>
@@ -29,96 +33,113 @@
           <li><a href="#">Contactanos</a></li>
           <li><a href="#">Biblioteca</a></li>
           <li>
-
             <!-- agrego input y label para el carrito -->
-             <label for="cart-toggle" class="cart-icon">
-              <img src="images/cart-shopping-solid.svg" alt="carrito de compras" class="cart-icon">
-             </label>
-             <input type="checkbox" id="cart-toggle">
+            <label for="cart-toggle" class="cart-icon">
+              <img
+                src="images/cart-shopping-solid.svg"
+                alt="carrito de compras"
+                class="cart-icon"
+              />
+            </label>
+            <input type="checkbox" id="cart-toggle" />
 
             <!-- agrego el carrito -->
-             <div class="cart">
+            <div class="cart">
               <h2>Tus productos</h2>
 
-                <div class="cart-item">
-                <img src="images/agua-florida.png" alt="productos del carrito">
-                  <div class="item-info">
-                    <h3 class="item-title">Agua florida</h3>
-                    <p class="item-bid">precio</p>
-                    <span class="item-price">$7.000</span>
-                  </div>
-                  <div class="item-handler">
-                    <span class="quantity-handler down">-</span>
-                    <span class="item-quantity">1</span>
-                    <span class="quantity-handler up">+</span>
-                  </div>
+              <div class="cart-item">
+                <img
+                  src="images/agua-florida.png"
+                  alt="productos del carrito"
+                />
+                <div class="item-info">
+                  <h3 class="item-title">Agua florida</h3>
+                  <p class="item-bid">precio</p>
+                  <span class="item-price">$7.000</span>
+                </div>
+                <div class="item-handler">
+                  <span class="quantity-handler down">-</span>
+                  <span class="item-quantity">1</span>
+                  <span class="quantity-handler up">+</span>
+                </div>
               </div>
 
               <div class="cart-item">
-                <img src="images/agua-florida.png" alt="productos del carrito">
-                  <div class="item-info">
-                    <h3 class="item-title">Agua florida</h3>
-                    <p class="item-bid">precio</p>
-                    <span class="item-price">$7.000</span>
-                  </div>
-                  <div class="item-handler">
-                    <span class="quantity-handler down">-</span>
-                    <span class="item-quantity">1</span>
-                    <span class="quantity-handler up">+</span>
-                  </div>
+                <img
+                  src="images/agua-florida.png"
+                  alt="productos del carrito"
+                />
+                <div class="item-info">
+                  <h3 class="item-title">Agua florida</h3>
+                  <p class="item-bid">precio</p>
+                  <span class="item-price">$7.000</span>
+                </div>
+                <div class="item-handler">
+                  <span class="quantity-handler down">-</span>
+                  <span class="item-quantity">1</span>
+                  <span class="quantity-handler up">+</span>
+                </div>
               </div>
 
               <div class="cart-item">
-                <img src="images/agua-florida.png" alt="productos del carrito">
-                  <div class="item-info">
-                    <h3 class="item-title">Agua florida</h3>
-                    <p class="item-bid">precio</p>
-                    <span class="item-price">$7.000</span>
-                  </div>
-                  <div class="item-handler">
-                    <span class="quantity-handler down">-</span>
-                    <span class="item-quantity">1</span>
-                    <span class="quantity-handler up">+</span>
-                  </div>
+                <img
+                  src="images/agua-florida.png"
+                  alt="productos del carrito"
+                />
+                <div class="item-info">
+                  <h3 class="item-title">Agua florida</h3>
+                  <p class="item-bid">precio</p>
+                  <span class="item-price">$7.000</span>
+                </div>
+                <div class="item-handler">
+                  <span class="quantity-handler down">-</span>
+                  <span class="item-quantity">1</span>
+                  <span class="quantity-handler up">+</span>
+                </div>
               </div>
 
               <div class="cart-item">
-                <img src="images/agua-florida.png" alt="productos del carrito">
-                  <div class="item-info">
-                    <h3 class="item-title">Agua florida</h3>
-                    <p class="item-bid">precio</p>
-                    <span class="item-price">$7.000</span>
-                  </div>
-                  <div class="item-handler">
-                    <span class="quantity-handler down">-</span>
-                    <span class="item-quantity">1</span>
-                    <span class="quantity-handler up">+</span>
-                  </div>
+                <img
+                  src="images/agua-florida.png"
+                  alt="productos del carrito"
+                />
+                <div class="item-info">
+                  <h3 class="item-title">Agua florida</h3>
+                  <p class="item-bid">precio</p>
+                  <span class="item-price">$7.000</span>
+                </div>
+                <div class="item-handler">
+                  <span class="quantity-handler down">-</span>
+                  <span class="item-quantity">1</span>
+                  <span class="quantity-handler up">+</span>
+                </div>
               </div>
 
               <div class="cart-item">
-                <img src="images/agua-florida.png" alt="productos del carrito">
-                  <div class="item-info">
-                    <h3 class="item-title">Agua florida</h3>
-                    <p class="item-bid">precio</p>
-                    <span class="item-price">$7.000</span>
-                  </div>
-                  <div class="item-handler">
-                    <span class="quantity-handler down">-</span>
-                    <span class="item-quantity">1</span>
-                    <span class="quantity-handler up">+</span>
-                  </div>
+                <img
+                  src="images/agua-florida.png"
+                  alt="productos del carrito"
+                />
+                <div class="item-info">
+                  <h3 class="item-title">Agua florida</h3>
+                  <p class="item-bid">precio</p>
+                  <span class="item-price">$7.000</span>
+                </div>
+                <div class="item-handler">
+                  <span class="quantity-handler down">-</span>
+                  <span class="item-quantity">1</span>
+                  <span class="quantity-handler up">+</span>
+                </div>
               </div>
 
               <span class="divider"></span>
 
               <div class="cart-total">
-                <p>Total: </p>
+                <p>Total:</p>
                 <span>35.000</span>
               </div>
               <button class="btn-add">Comprar</button>
-                
-             </div>
+            </div>
 
             <img
               src="images/cart-hamburguesa.png"
@@ -530,7 +551,6 @@
             <button class="button"><a href="#">Agregar al carrito</a></button>
           </div>
         </div>
-
       </div>
 
       <button class="btn-load">Ver Mas</button>
